# turbo_fast_app

./: .gitignore  Dockerfile  Dockerrun.aws.json  README.md  application.py  pyproject.toml  requirements.txt
app/: Model.py  app.py  main.py  model.py  preprocess.py  preprocess_utils.py  pydantic_models.py
app/tests/: test_get_models.py  test_predict_endpoint.py  test_select_model_endpoint.py
tests/: test_turbofan_fast.py
turbo_fast_app/: Models.py  examples.txt  lstm_pipeline.h5
turbofan_fast/: Model.py  app.py  iris_model.pkl
