[tool.poetry]
name = "turbofan-fast"
version = "0.1.0"
description = ""
authors = ["Leon Adams <skorpio11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
pandas = "^1.3.2"
scikit-learn = "^0.24.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
